--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ head start a successful career</h2>
                   <p>Audio player software is used to play back sound recordings in one of the many formats available for computers today. It can also play back music CDs. There is audio player software that is native to the computer’s operating system. It can also play back music CDs.</p>
                   <div class="user">
                       <div class="user-img">
-                        <img src="images/mery.png">
+                        <img src="images/tom.png">
                       </div>
                       <div class="user-info">
                         <h4>Effie Mack</h4>
@@ -261,11 +261,11 @@ head start a successful career</h2>
             <!-------------->
              <!-------------->
             <div class="col-xxl-2 col-xl-2 col-lg-4 col-md-6 col-sm-6">
-              <div class="card">
+              <div class="card moon">
                 <div class="card-body">
                   <div class="user">
                       <div class="user-img">
-                        <img src="images/mery.png">
+                        <img src="images/luis.png">
                       </div>
                       <div class="user-info">
                         <h4>Luis Harrison</h4>
@@ -285,7 +285,7 @@ head start a successful career</h2>
                   <p>Audio player software is used to play back sound recordings in one of the many formats available for computers today. It can also play back music CDs. There is audio player software that is native to the computer’s operating system. It can also play back music CDs.</p>
                   <div class="user">
                       <div class="user-img">
-                        <img src="images/mery.png">
+                        <img src="images/mark.png">
                       </div>
                       <div class="user-info">
                         <h4>Angel mark</h4>
@@ -305,7 +305,7 @@ head start a successful career</h2>
                   <p>Audio player software is used to play back sound recordings in one of the many formats available for computers today. It can also play back music CDs. There is audio player software that is native to the computer’s operating system. It can also play back music CDs.</p>
                   <div class="user">
                       <div class="user-img">
-                        <img src="images/mery.png">
+                        <img src="images/selina.png">
                       </div>
                       <div class="user-info">
                         <h4>Selina Hans</h4>
